# macdonalds-course

./: README.md  cashiers.py  chefs.py  main.py  objects.py  orders.py  orders_queue.py  products.py  pyproject.toml
api/: main.py
bot/: bot.py
