[tool.poetry]
name = "macdonalds-course"
version = "0.1.0"
description = ""
authors = ["bogdanov-ds <bogdanov-ds@sber-zvuk.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.20"
fastapi = {extras = ["all"], version = "^0.78.0"}
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
